@@ -90,6 +90,7 @@ enum{
   PROP_CHANNEL_TYPE,
   PROP_LINE,
   PROP_TIMESTAMP,
+  PROP_CONTROL_KEY,
   PROP_CONTROL_NAME,
   PROP_STEPS,
   PROP_UPPER,
@@ -235,6 +236,21 @@ ags_automation_class_init(AgsAutomationClass *automation)
 				  param_spec);
   
   /**
+   * AgsAutomation:control-key:
+   *
+   * The effect's assigned control key.
+   * 
+   * Since: 5.4.0
+   */
+  param_spec =  g_param_spec_pointer("control-key",
+				    i18n_pspec("control key"),
+				    i18n_pspec("The control key"),
+				    G_PARAM_READABLE | G_PARAM_WRITABLE);
+  g_object_class_install_property(gobject,
+				  PROP_CONTROL_KEY,
+				  param_spec);
+  
+  /**
    * AgsAutomation:control-name:
    *
    * The effect's assigned control name.
@@ -377,6 +393,7 @@ ags_automation_init(AgsAutomation *automation)
 
   g_object_ref(automation->timestamp);
   
+  automation->control_key = NULL;
   automation->control_name = NULL;
 
   automation->steps = 8;
@@ -457,6 +474,19 @@ ags_automation_set_property(GObject *gobject,
       g_rec_mutex_lock(automation_mutex);
 
       automation->channel_type = channel_type;
+      
+      g_rec_mutex_unlock(automation_mutex);
+    }
+    break;
+  case PROP_CONTROL_KEY:
+    {
+      gpointer control_key;
+
+      control_key = g_value_get_pointer(value);
+
+      g_rec_mutex_lock(automation_mutex);
+
+      automation->control_key = control_key;
       
       g_rec_mutex_unlock(automation_mutex);
     }
@@ -711,6 +741,15 @@ ags_automation_get_property(GObject *gobject,
       g_rec_mutex_lock(automation_mutex);
 
       g_value_set_object(value, automation->timestamp);
+
+      g_rec_mutex_unlock(automation_mutex);
+    }
+    break;
+  case PROP_CONTROL_KEY:
+    {
+      g_rec_mutex_lock(automation_mutex);
+
+      g_value_set_pointer(value, automation->control_key);
 
       g_rec_mutex_unlock(automation_mutex);
     }
@@ -1681,6 +1720,14 @@ ags_automation_add(GList *automation,
   if(ags_automation_find_near_timestamp_extended(automation, line,
 						 channel_type, control_name,
 						 timestamp) == NULL){
+    gpointer control_key;
+    
+    control_key = ags_automation_control_name_key_manager_find_automation(ags_automation_control_name_key_manager_get_instance(),
+									  control_name);
+
+    ags_automation_set_control_key(new_automation,
+				   control_key);
+    
     automation = g_list_insert_sorted(automation,
 				      new_automation,
 				      ags_automation_sort_func);
@@ -1919,6 +1966,53 @@ ags_automation_set_timestamp(AgsAutomation *automation, AgsTimestamp *timestamp)
 
   g_object_set(automation,
 	       "timestamp", timestamp,
+	       NULL);
+}
+
+/**
+ * ags_automation_get_control_key:
+ * @automation: the #AgsAutomation
+ * 
+ * Get control key.
+ * 
+ * Returns: (transfer full): the control key
+ * 
+ * Since: 5.4.0
+ */
+gpointer
+ags_automation_get_control_key(AgsAutomation *automation)
+{
+  gchar *control_key;
+
+  if(!AGS_IS_AUTOMATION(automation)){
+    return(NULL);
+  }
+
+  g_object_get(automation,
+	       "control-key", &control_key,
+	       NULL);
+
+  return(control_key);
+}
+
+/**
+ * ags_automation_set_control_key:
+ * @automation: the #AgsAutomation
+ * @control_key: the control key
+ * 
+ * Set control key.
+ * 
+ * Since: 5.4.0
+ */
+void
+ags_automation_set_control_key(AgsAutomation *automation, gpointer control_key)
+{
+  if(!AGS_IS_AUTOMATION(automation)){
+    return;
+  }
+
+  g_object_set(automation,
+	       "control-key", control_key,
 	       NULL);
 }
 
@@ -3928,29 +4022,32 @@ ags_automation_filter(GList *automation,
 {
   GList *start_list;
 
+  gpointer control_key;
+
   start_list = NULL;
+
+  control_key = ags_automation_control_name_key_manager_find_automation(ags_automation_control_name_key_manager_get_instance(),
+									specifier);
 
   while(automation != NULL){
     GType cmp_channel_type;
 
-    gchar *cmp_specifier;
-
+    gpointer cmp_control_key;
+    
     guint cmp_line;
 
     cmp_channel_type = ags_automation_get_channel_type(automation->data);
-    cmp_specifier = ags_automation_get_control_name(automation->data);
+    cmp_control_key = ags_automation_get_control_key(automation->data);
     cmp_line = ags_automation_get_line(automation->data);
 
     if(channel_type == cmp_channel_type &&
        line == cmp_line &&
-       !g_strcmp0(specifier, cmp_specifier)){
+       control_key == cmp_control_key){
       start_list = g_list_prepend(start_list,
 				  automation->data);
 
       g_object_ref(automation->data);
     }
-
-    g_free(cmp_specifier);
     
     automation = automation->next;
   }
