@@ -3262,6 +3262,11 @@ ags_fluid_interpolate_none_util_pitch_float
 ags_fluid_interpolate_none_util_pitch_double
 ags_fluid_interpolate_none_util_pitch_complex
 ags_fluid_interpolate_none_util_pitch
+ags_automation_control_name_key_manager_get_type
+ags_automation_control_name_key_manager_get_obj_mutex
+ags_automation_control_name_key_manager_find_automation
+ags_automation_control_name_key_manager_get_instance
+ags_automation_control_name_key_manager_new
 ags_channel_get_type
 ags_channel_flags_get_type
 ags_channel_error_quark
@@ -3491,6 +3496,8 @@ ags_automation_get_line
 ags_automation_set_line
 ags_automation_get_timestamp
 ags_automation_set_timestamp
+ags_automation_get_control_key
+ags_automation_set_control_key
 ags_automation_get_control_name
 ags_automation_set_control_name
 ags_automation_get_steps
